# 5i-opengl-texturing

./: .gitignore  CMakeLists.txt  README.md  TP1.cpp  main.cpp
ESGIGL/: EsgiShader.cpp  EsgiShader.h
ESGIGL/common/: EsgiMesh.cpp  EsgiMesh.h  EsgiTga.cpp  EsgiTga.h  EsgiTimer.h  EsgiUtils.cpp  EsgiUtils.h  cube.cpp  cube.h  matrix.cpp  vector.h
include/: EsgiSprite.h  TP1.h  TP2.h  config.h
resources/: Logo-ESGI.tga  simpleSprite.frag  simpleSprite.vert
src/: TP1.cpp  TP2.cpp  main.cpp
visual-studio/: opengl-texturing.sln  opengl-texturing.vcxproj  opengl-texturing.vcxproj.filters
visual-studio/dependencies/glew/lib/: glew32d.lib
windows/: opengl-texturing.vcxproj  opengl-texturing.vcxproj.filters
